Fixed sattelite rotating

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script type="module">
     import { SatteliteVisualizer } from './js/SatteliteVisualizer.js';
 
-    const visualizer = new SatteliteVisualizer (window.innerWidth, window.innerWidth);
+    var visualizer = new SatteliteVisualizer (window.innerWidth, window.innerWidth);
 
     function sliderClickLeft ()
     {
@@ -36,6 +36,7 @@
 
       return false;
     }
+
 
   </script>
   <div class="section">
