added beam class

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <h1 class="satellite-point-2">14°З.Д.</h1>
         </a>
         <a href="#" id="sv9" class="satellite-name-box-satview w-inline-block">
-          <h1 class="satellite-name-chosen-2">АМ44</h1>
+          <h1 class="satellite-name-chosen-2" id="am44name">АМ44</h1>
           <h1 class="satellite-point-2">11°З.Д.</h1>
         </a>
         <a href="#" id="sv0" class="satellite-name-box-satview w-inline-block">
@@ -784,7 +784,7 @@
           </div>
         </div><a href="#" class="close-button w-inline-block"><img src="images/Group-694.svg" alt="" class="close-icon"></a></div>
     </div>
-    <div class="satellite-info-container">
+    <div class="satellite-info-container" id="sinfo">
       <div class="satellites-ranges-info">
         <div class="satellite-heading">
           <h1 class="heading-8" id="svda">Экспресс-АМ44</h1>
