--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
             <h1 class="satellite-point-2">14°З.Д.</h1>
           </a>
           <div class="div-block-46">
-            <a href="#" class="c-range-2 w-inline-block">
+            <a href="#" id="am8c" class="c-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="C-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M23.53,35a30.56,30.56,0,0,1,2.22-11.64,29.59,29.59,0,0,1,6.1-9.54,27.73,27.73,0,0,1,9.49-6.4,30.59,30.59,0,0,1,12-2.37A32,32,0,0,1,66.16,7.36,33.83,33.83,0,0,1,76,14l-6.5,7.53a31.78,31.78,0,0,0-7.68-5.34,19.39,19.39,0,0,0-8.56-1.87,18.15,18.15,0,0,0-9.81,2.75,18.87,18.87,0,0,0-6.85,7.48A22.33,22.33,0,0,0,34.19,35a21,21,0,0,0,5.45,14.64,17.64,17.64,0,0,0,13.65,6,19.54,19.54,0,0,0,8.79-1.87,33,33,0,0,0,7.85-5.67l6.54,6.65a40.4,40.4,0,0,1-6.4,5.45,27.53,27.53,0,0,1-7.51,3.43A33.6,33.6,0,0,1,53,65a29.27,29.27,0,0,1-15-4A28.17,28.17,0,0,1,27.34,50.18,30.77,30.77,0,0,1,23.53,35Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ku-range-2 w-inline-block">
+            <a href="#" id="am8ku" class="ku-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ku-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M1.25,63.5V5.58H11.43V34.7L39,5.58H51.45L27.38,30.49l25.16,33H40.22L20.43,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M59.53,47.62V19.83h10V44.72c0,3.4.82,6,2.46,7.9a8.71,8.71,0,0,0,6.91,2.8A9.21,9.21,0,0,0,86,52.5a11.19,11.19,0,0,0,2.71-8V19.83h10V63.5h-10V56.81q-5.3,7.62-13.65,7.61c-4.88,0-8.68-1.51-11.43-4.54S59.53,52.77,59.53,47.62Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ka-range-2 w-inline-block">
+            <a href="#" id="am8ka" class="ka-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ka-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M2.22,63.5V5.58H12.4V34.7L39.94,5.58H52.42L28.35,30.49l25.16,33H41.2L21.41,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M58,50.77q0-7,4.88-10.69t12.87-3.65a39.12,39.12,0,0,1,12,1.82v-.82q0-4.59-2.76-7c-1.83-1.61-4.49-2.42-8-2.42a32.17,32.17,0,0,0-12.48,2.77l-2.77-8A44.51,44.51,0,0,1,69.73,20a38.81,38.81,0,0,1,8.81-.89q9.55,0,14.4,4.78T97.78,37.6V63.5h-10V58.12a17.46,17.46,0,0,1-14.1,6.3,19.27,19.27,0,0,1-7.75-1.51,13.22,13.22,0,0,1-5.68-4.66A12.79,12.79,0,0,1,58,50.77Zm10-.36a5.52,5.52,0,0,0,2.39,4.73,10,10,0,0,0,6,1.73,12.89,12.89,0,0,0,8.26-2.57A8,8,0,0,0,88,47.7V45.2a26.74,26.74,0,0,0-10-1.74,12.73,12.73,0,0,0-7.33,1.82A5.88,5.88,0,0,0,68.05,50.41Z"></path></g></g></svg></div>
             </a>
           </div>
@@ -227,13 +227,13 @@
             <h1 class="satellite-point-2">11°З.Д.</h1>
           </a>
           <div class="div-block-46">
-            <a href="#" class="c-range-2 w-inline-block">
+            <a href="#" id="am44c" class="c-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="C-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M23.53,35a30.56,30.56,0,0,1,2.22-11.64,29.59,29.59,0,0,1,6.1-9.54,27.73,27.73,0,0,1,9.49-6.4,30.59,30.59,0,0,1,12-2.37A32,32,0,0,1,66.16,7.36,33.83,33.83,0,0,1,76,14l-6.5,7.53a31.78,31.78,0,0,0-7.68-5.34,19.39,19.39,0,0,0-8.56-1.87,18.15,18.15,0,0,0-9.81,2.75,18.87,18.87,0,0,0-6.85,7.48A22.33,22.33,0,0,0,34.19,35a21,21,0,0,0,5.45,14.64,17.64,17.64,0,0,0,13.65,6,19.54,19.54,0,0,0,8.79-1.87,33,33,0,0,0,7.85-5.67l6.54,6.65a40.4,40.4,0,0,1-6.4,5.45,27.53,27.53,0,0,1-7.51,3.43A33.6,33.6,0,0,1,53,65a29.27,29.27,0,0,1-15-4A28.17,28.17,0,0,1,27.34,50.18,30.77,30.77,0,0,1,23.53,35Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ku-range-2 w-inline-block">
+            <a href="#" id="am44ku" class="ku-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ku-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M1.25,63.5V5.58H11.43V34.7L39,5.58H51.45L27.38,30.49l25.16,33H40.22L20.43,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M59.53,47.62V19.83h10V44.72c0,3.4.82,6,2.46,7.9a8.71,8.71,0,0,0,6.91,2.8A9.21,9.21,0,0,0,86,52.5a11.19,11.19,0,0,0,2.71-8V19.83h10V63.5h-10V56.81q-5.3,7.62-13.65,7.61c-4.88,0-8.68-1.51-11.43-4.54S59.53,52.77,59.53,47.62Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ka-range-2 w-inline-block">
+            <a href="#" id="am44ka" class="ka-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ka-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M2.22,63.5V5.58H12.4V34.7L39.94,5.58H52.42L28.35,30.49l25.16,33H41.2L21.41,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M58,50.77q0-7,4.88-10.69t12.87-3.65a39.12,39.12,0,0,1,12,1.82v-.82q0-4.59-2.76-7c-1.83-1.61-4.49-2.42-8-2.42a32.17,32.17,0,0,0-12.48,2.77l-2.77-8A44.51,44.51,0,0,1,69.73,20a38.81,38.81,0,0,1,8.81-.89q9.55,0,14.4,4.78T97.78,37.6V63.5h-10V58.12a17.46,17.46,0,0,1-14.1,6.3,19.27,19.27,0,0,1-7.75-1.51,13.22,13.22,0,0,1-5.68-4.66A12.79,12.79,0,0,1,58,50.77Zm10-.36a5.52,5.52,0,0,0,2.39,4.73,10,10,0,0,0,6,1.73,12.89,12.89,0,0,0,8.26-2.57A8,8,0,0,0,88,47.7V45.2a26.74,26.74,0,0,0-10-1.74,12.73,12.73,0,0,0-7.33,1.82A5.88,5.88,0,0,0,68.05,50.41Z"></path></g></g></svg></div>
             </a>
           </div>
@@ -244,13 +244,13 @@
             <h1 class="satellite-point-2">36°В.Д.</h1>
           </a>
           <div class="div-block-46">
-            <a href="#" class="c-range-2 w-inline-block">
+            <a href="#" id="amu1c" class="c-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="C-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M23.53,35a30.56,30.56,0,0,1,2.22-11.64,29.59,29.59,0,0,1,6.1-9.54,27.73,27.73,0,0,1,9.49-6.4,30.59,30.59,0,0,1,12-2.37A32,32,0,0,1,66.16,7.36,33.83,33.83,0,0,1,76,14l-6.5,7.53a31.78,31.78,0,0,0-7.68-5.34,19.39,19.39,0,0,0-8.56-1.87,18.15,18.15,0,0,0-9.81,2.75,18.87,18.87,0,0,0-6.85,7.48A22.33,22.33,0,0,0,34.19,35a21,21,0,0,0,5.45,14.64,17.64,17.64,0,0,0,13.65,6,19.54,19.54,0,0,0,8.79-1.87,33,33,0,0,0,7.85-5.67l6.54,6.65a40.4,40.4,0,0,1-6.4,5.45,27.53,27.53,0,0,1-7.51,3.43A33.6,33.6,0,0,1,53,65a29.27,29.27,0,0,1-15-4A28.17,28.17,0,0,1,27.34,50.18,30.77,30.77,0,0,1,23.53,35Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ku-range-2 w-inline-block">
+            <a href="#" id="amu1ku" class="ku-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ku-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M1.25,63.5V5.58H11.43V34.7L39,5.58H51.45L27.38,30.49l25.16,33H40.22L20.43,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M59.53,47.62V19.83h10V44.72c0,3.4.82,6,2.46,7.9a8.71,8.71,0,0,0,6.91,2.8A9.21,9.21,0,0,0,86,52.5a11.19,11.19,0,0,0,2.71-8V19.83h10V63.5h-10V56.81q-5.3,7.62-13.65,7.61c-4.88,0-8.68-1.51-11.43-4.54S59.53,52.77,59.53,47.62Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ka-range-2 w-inline-block">
+            <a href="#" id="amu1ka" class="ka-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ka-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M2.22,63.5V5.58H12.4V34.7L39.94,5.58H52.42L28.35,30.49l25.16,33H41.2L21.41,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M58,50.77q0-7,4.88-10.69t12.87-3.65a39.12,39.12,0,0,1,12,1.82v-.82q0-4.59-2.76-7c-1.83-1.61-4.49-2.42-8-2.42a32.17,32.17,0,0,0-12.48,2.77l-2.77-8A44.51,44.51,0,0,1,69.73,20a38.81,38.81,0,0,1,8.81-.89q9.55,0,14.4,4.78T97.78,37.6V63.5h-10V58.12a17.46,17.46,0,0,1-14.1,6.3,19.27,19.27,0,0,1-7.75-1.51,13.22,13.22,0,0,1-5.68-4.66A12.79,12.79,0,0,1,58,50.77Zm10-.36a5.52,5.52,0,0,0,2.39,4.73,10,10,0,0,0,6,1.73,12.89,12.89,0,0,0,8.26-2.57A8,8,0,0,0,88,47.7V45.2a26.74,26.74,0,0,0-10-1.74,12.73,12.73,0,0,0-7.33,1.82A5.88,5.88,0,0,0,68.05,50.41Z"></path></g></g></svg></div>
             </a>
           </div>
@@ -261,13 +261,13 @@
             <h1 class="satellite-point-2">40°В.Д.</h1>
           </a>
           <div class="div-block-46">
-            <a href="#" class="c-range-2 w-inline-block">
+            <a href="#" id="am7c" class="c-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="C-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M23.53,35a30.56,30.56,0,0,1,2.22-11.64,29.59,29.59,0,0,1,6.1-9.54,27.73,27.73,0,0,1,9.49-6.4,30.59,30.59,0,0,1,12-2.37A32,32,0,0,1,66.16,7.36,33.83,33.83,0,0,1,76,14l-6.5,7.53a31.78,31.78,0,0,0-7.68-5.34,19.39,19.39,0,0,0-8.56-1.87,18.15,18.15,0,0,0-9.81,2.75,18.87,18.87,0,0,0-6.85,7.48A22.33,22.33,0,0,0,34.19,35a21,21,0,0,0,5.45,14.64,17.64,17.64,0,0,0,13.65,6,19.54,19.54,0,0,0,8.79-1.87,33,33,0,0,0,7.85-5.67l6.54,6.65a40.4,40.4,0,0,1-6.4,5.45,27.53,27.53,0,0,1-7.51,3.43A33.6,33.6,0,0,1,53,65a29.27,29.27,0,0,1-15-4A28.17,28.17,0,0,1,27.34,50.18,30.77,30.77,0,0,1,23.53,35Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ku-range-2 w-inline-block">
+            <a href="#" id="am7ku" class="ku-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ku-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M1.25,63.5V5.58H11.43V34.7L39,5.58H51.45L27.38,30.49l25.16,33H40.22L20.43,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M59.53,47.62V19.83h10V44.72c0,3.4.82,6,2.46,7.9a8.71,8.71,0,0,0,6.91,2.8A9.21,9.21,0,0,0,86,52.5a11.19,11.19,0,0,0,2.71-8V19.83h10V63.5h-10V56.81q-5.3,7.62-13.65,7.61c-4.88,0-8.68-1.51-11.43-4.54S59.53,52.77,59.53,47.62Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ka-range-2 w-inline-block">
+            <a href="#" id="am7ka" class="ka-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ka-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M2.22,63.5V5.58H12.4V34.7L39.94,5.58H52.42L28.35,30.49l25.16,33H41.2L21.41,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M58,50.77q0-7,4.88-10.69t12.87-3.65a39.12,39.12,0,0,1,12,1.82v-.82q0-4.59-2.76-7c-1.83-1.61-4.49-2.42-8-2.42a32.17,32.17,0,0,0-12.48,2.77l-2.77-8A44.51,44.51,0,0,1,69.73,20a38.81,38.81,0,0,1,8.81-.89q9.55,0,14.4,4.78T97.78,37.6V63.5h-10V58.12a17.46,17.46,0,0,1-14.1,6.3,19.27,19.27,0,0,1-7.75-1.51,13.22,13.22,0,0,1-5.68-4.66A12.79,12.79,0,0,1,58,50.77Zm10-.36a5.52,5.52,0,0,0,2.39,4.73,10,10,0,0,0,6,1.73,12.89,12.89,0,0,0,8.26-2.57A8,8,0,0,0,88,47.7V45.2a26.74,26.74,0,0,0-10-1.74,12.73,12.73,0,0,0-7.33,1.82A5.88,5.88,0,0,0,68.05,50.41Z"></path></g></g></svg></div>
             </a>
           </div>
@@ -278,13 +278,13 @@
             <h1 class="satellite-point-2">53°В.Д.</h1>
           </a>
           <div class="div-block-46">
-            <a href="#" class="c-range-2 w-inline-block">
+            <a href="#" id="am6c" class="c-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="C-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M23.53,35a30.56,30.56,0,0,1,2.22-11.64,29.59,29.59,0,0,1,6.1-9.54,27.73,27.73,0,0,1,9.49-6.4,30.59,30.59,0,0,1,12-2.37A32,32,0,0,1,66.16,7.36,33.83,33.83,0,0,1,76,14l-6.5,7.53a31.78,31.78,0,0,0-7.68-5.34,19.39,19.39,0,0,0-8.56-1.87,18.15,18.15,0,0,0-9.81,2.75,18.87,18.87,0,0,0-6.85,7.48A22.33,22.33,0,0,0,34.19,35a21,21,0,0,0,5.45,14.64,17.64,17.64,0,0,0,13.65,6,19.54,19.54,0,0,0,8.79-1.87,33,33,0,0,0,7.85-5.67l6.54,6.65a40.4,40.4,0,0,1-6.4,5.45,27.53,27.53,0,0,1-7.51,3.43A33.6,33.6,0,0,1,53,65a29.27,29.27,0,0,1-15-4A28.17,28.17,0,0,1,27.34,50.18,30.77,30.77,0,0,1,23.53,35Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ku-range-2 w-inline-block">
+            <a href="#" id="am6ku" class="ku-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ku-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M1.25,63.5V5.58H11.43V34.7L39,5.58H51.45L27.38,30.49l25.16,33H40.22L20.43,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M59.53,47.62V19.83h10V44.72c0,3.4.82,6,2.46,7.9a8.71,8.71,0,0,0,6.91,2.8A9.21,9.21,0,0,0,86,52.5a11.19,11.19,0,0,0,2.71-8V19.83h10V63.5h-10V56.81q-5.3,7.62-13.65,7.61c-4.88,0-8.68-1.51-11.43-4.54S59.53,52.77,59.53,47.62Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ka-range-2 w-inline-block">
+            <a href="#" id="am6ka" class="ka-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ka-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M2.22,63.5V5.58H12.4V34.7L39.94,5.58H52.42L28.35,30.49l25.16,33H41.2L21.41,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M58,50.77q0-7,4.88-10.69t12.87-3.65a39.12,39.12,0,0,1,12,1.82v-.82q0-4.59-2.76-7c-1.83-1.61-4.49-2.42-8-2.42a32.17,32.17,0,0,0-12.48,2.77l-2.77-8A44.51,44.51,0,0,1,69.73,20a38.81,38.81,0,0,1,8.81-.89q9.55,0,14.4,4.78T97.78,37.6V63.5h-10V58.12a17.46,17.46,0,0,1-14.1,6.3,19.27,19.27,0,0,1-7.75-1.51,13.22,13.22,0,0,1-5.68-4.66A12.79,12.79,0,0,1,58,50.77Zm10-.36a5.52,5.52,0,0,0,2.39,4.73,10,10,0,0,0,6,1.73,12.89,12.89,0,0,0,8.26-2.57A8,8,0,0,0,88,47.7V45.2a26.74,26.74,0,0,0-10-1.74,12.73,12.73,0,0,0-7.33,1.82A5.88,5.88,0,0,0,68.05,50.41Z"></path></g></g></svg></div>
             </a>
           </div>
@@ -295,13 +295,13 @@
             <h1 class="satellite-point-2">56°В.Д.</h1>
           </a>
           <div class="div-block-46">
-            <a href="#" class="c-range-2 w-inline-block">
+            <a href="#" id="at1c" class="c-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="C-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M23.53,35a30.56,30.56,0,0,1,2.22-11.64,29.59,29.59,0,0,1,6.1-9.54,27.73,27.73,0,0,1,9.49-6.4,30.59,30.59,0,0,1,12-2.37A32,32,0,0,1,66.16,7.36,33.83,33.83,0,0,1,76,14l-6.5,7.53a31.78,31.78,0,0,0-7.68-5.34,19.39,19.39,0,0,0-8.56-1.87,18.15,18.15,0,0,0-9.81,2.75,18.87,18.87,0,0,0-6.85,7.48A22.33,22.33,0,0,0,34.19,35a21,21,0,0,0,5.45,14.64,17.64,17.64,0,0,0,13.65,6,19.54,19.54,0,0,0,8.79-1.87,33,33,0,0,0,7.85-5.67l6.54,6.65a40.4,40.4,0,0,1-6.4,5.45,27.53,27.53,0,0,1-7.51,3.43A33.6,33.6,0,0,1,53,65a29.27,29.27,0,0,1-15-4A28.17,28.17,0,0,1,27.34,50.18,30.77,30.77,0,0,1,23.53,35Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="empty-range w-inline-block">
+            <a href="#" id="at1ku" class="empty-range w-inline-block">
               <div class="range-type-letter empty w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ku-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M1.25,63.5V5.58H11.43V34.7L39,5.58H51.45L27.38,30.49l25.16,33H40.22L20.43,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M59.53,47.62V19.83h10V44.72c0,3.4.82,6,2.46,7.9a8.71,8.71,0,0,0,6.91,2.8A9.21,9.21,0,0,0,86,52.5a11.19,11.19,0,0,0,2.71-8V19.83h10V63.5h-10V56.81q-5.3,7.62-13.65,7.61c-4.88,0-8.68-1.51-11.43-4.54S59.53,52.77,59.53,47.62Z"></path></g></g></svg></div>
             </a>
-            <a href="#" class="ka-range-2 w-inline-block">
+            <a href="#" id="at1ka" class="ka-range-2 w-inline-block">
               <div class="range-type-letter w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 70"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#201c5f;}</style></defs><g id="Ka-2" class="cls-1"><g class="cls-1"><path class="cls-2" d="M2.22,63.5V5.58H12.4V34.7L39.94,5.58H52.42L28.35,30.49l25.16,33H41.2L21.41,37.44l-9,9.25V63.5Z"></path><path class="cls-2" d="M58,50.77q0-7,4.88-10.69t12.87-3.65a39.12,39.12,0,0,1,12,1.82v-.82q0-4.59-2.76-7c-1.83-1.61-4.49-2.42-8-2.42a32.17,32.17,0,0,0-12.48,2.77l-2.77-8A44.51,44.51,0,0,1,69.73,20a38.81,38.81,0,0,1,8.81-.89q9.55,0,14.4,4.78T97.78,37.6V63.5h-10V58.12a17.46,17.46,0,0,1-14.1,6.3,19.27,19.27,0,0,1-7.75-1.51,13.22,13.22,0,0,1-5.68-4.66A12.79,12.79,0,0,1,58,50.77Zm10-.36a5.52,5.52,0,0,0,2.39,4.73,10,10,0,0,0,6,1.73,12.89,12.89,0,0,0,8.26-2.57A8,8,0,0,0,88,47.7V45.2a26.74,26.74,0,0,0-10-1.74,12.73,12.73,0,0,0-7.33,1.82A5.88,5.88,0,0,0,68.05,50.41Z"></path></g></g></svg></div>
             </a>
           </div>
