--- a/index.html
+++ b/index.html
@@ -235,6 +235,45 @@
     </div>
     <div class="earthview-satellite-list">
       <div class="div-block-36" id="evsat">
+        <div class="country-heading">
+          <h1 class="country-heading-2">Услуги ГП КС<br>в Арктике</h1>
+          <a href="#" class="geo_target w-inline-block">
+            <div class="geo_icon w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 30 30">
+              <defs>
+                <style>
+                  .cls-1 {
+                    fill: currentColor;
+                  }
+
+                </style>
+              </defs>
+              <path class="cls-1" d="M28.08,1.73a.47.47,0,0,0-.63-.12L1.84,12.84c-.27.12-.42.25-.33.51,0,.88,0,.88.86,1.11l10,2.76a.57.57,0,0,1,.44.45q1.41,5,2.84,10c.2.73.21.7,1,.82.37.06.52-.06.67-.39q5.5-12.54,11-25.07C28.66,2.33,28.66,2.34,28.08,1.73ZM16.65,26.36c-.42-1.48-.81-2.84-1.19-4.2-.5-1.76-1-3.52-1.49-5.28a1.13,1.13,0,0,0-.84-.81l-9-2.51-.35-.11,23-10.11Z"></path>
+            </svg></div>
+          </a>
+        </div>
+        <div class="rscc-services">
+          <div class="service-div">
+            <h1 class="service_heading">Связь на СМП</h1>
+            <a href="#" class="play_button w-inline-block">
+              <div class="play_icon w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 71.38 72.95">
+                <defs>
+                  <style>
+                    .cls-1 {
+                      fill: currentColor;
+                    }
+
+                  </style>
+                </defs>
+                <polygon class="cls-1" points="71.38 36.47 13.76 7.03 13.76 65.91 71.38 36.47">
+                </polygon>
+              </svg></div>
+            </a>
+          </div>
+          <div class="service-div">
+            <h1 class="service_heading">Метеостанции</h1>
+          </div>
+        </div>
+
         <div class="country-heading" id="country-heading">
           <h1 class="country-heading-2" id="ctrname">Название выбранной страны</h1>
           <div class="country-subheading">Входит в зоны обслуживания космических аппаратов</div>
