added animation controls

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </div>
     <div class="earthview-satellite-list">
       <div class="div-block-36" id="evsat">
-        <div class="country-heading">
+        <div class="country-heading" id="arctic-header" style="display: none">
           <h1 class="country-heading-2">Услуги ГП КС<br>в Арктике</h1>
           <a href="#" class="geo_target w-inline-block">
             <div class="geo_icon w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 30 30">
@@ -251,10 +251,10 @@
             </svg></div>
           </a>
         </div>
-        <div class="rscc-services">
+        <div class="rscc-services" id="arctic-logo" style="display: none">
           <div class="service-div">
             <h1 class="service_heading">Связь на СМП</h1>
-            <a href="#" class="play_button w-inline-block">
+            <a href="#" class="play_button w-inline-block" id="arctic-animation-play">
               <div class="play_icon w-embed"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 71.38 72.95">
                 <defs>
                   <style>
@@ -698,6 +698,9 @@
       <a href="#" class="right-big-button w-inline-block">
         <h1 class="heading-7">Фильтр<br>по странам</h1>
       </a>
+      <a href="#" class="right-big-button w-inline-block" id="menu-arctic">
+      <h1 class="heading-7">Услуги ГП КС<br>в Арктике</h1>
+    </a>
       
     </div>
     <div class="countries-filter" id="cfilter">
